--- a/functions/package.json
+++ b/functions/package.json
@@ -11,8 +11,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
-    "firebase-admin": "~5.8.1",
-    "firebase-functions": "^0.8.1"
+    "firebase-admin": "^5.11.0",
+    "firebase-functions": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
